--- a/.env
+++ b/.env
@@ -5,12 +5,10 @@ TZ=Europe/Sofia
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=lab08
-DB_USERNAME=lab08
-DB_PASSWORD=lab123
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=redis
 REDIS_PORT=6379
-
-MIGRATE=1
